--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vertical Video Player</title>
     <style>
+
+        /* Ensure the video player adapts to different screen sizes */
+@media (max-width: 767px) {
+    .video-wrapper {
+        max-width: 100vw;
+        max-height: 100vh;
+    }
+
+
+    
         body, html {
             margin: 0;
             padding: 0;
@@ -36,11 +46,10 @@
             background-color: black;
         }
 
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    video {
+        width: 100%;
+        height: 100%;
+    }
 
         .controls {
             position: absolute;
@@ -64,13 +73,13 @@
 
         #bottomControls {
             position: absolute;
-            bottom: 20px;
+            bottom: 10px;
             left: 0;
             width: 100%;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 0 20px;
+            padding: 0 10px;
             box-sizing: border-box;
         }
 
@@ -84,7 +93,7 @@
 
         #progressBarContainer {
             flex-grow: 1;
-            height: 5px;
+            height: 4px;
             background-color: rgba(255, 255, 255, 0.2);
             cursor: pointer;
             margin: 0 10px;
@@ -109,7 +118,7 @@
         }
 
         #currentTime {
-            font-size: 14px;
+            font-size: 12px;
             color: white;
             opacity: 0.7;
             user-select: none; /* Prevent text selection */
